# gtkmm-application-template

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  init.sh  uninstall.sh
cmake/: FindGTKMM.cmake  GlibUtils.cmake  InstallScript.cmake  projectdefinitions.h.in  uninstall.sh
data/: CMakeLists.txt  GtkmmAppTemplate.desktop  app.gresource.xml  config.h.in  desktop.in  gresource.xml.in  gschema.xml.in  org.gtkmm.template.gschema.xml
data/ui/: headerbar.glade  preferences.glade  window.glade
res/: app.gresource.xml  app.gschema.xml
res/window/: window.glade
src/: CMakeLists.txt  application.cpp  application.h  main.cpp  preferences.cpp  preferences.h  settings.cpp  settings.h  window.cpp  window.h
